2019-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: Turn verbose tests on in dev and on Travis

	* inst/tinytest/test_client_package.R: Finer-grained skip messages
	* inst/tinytest/test_module_client_package.R: Idem
	* inst/tinytest/test_expose_class.R: Idem
	* inst/tinytest/test_interface.R: Idem
	* inst/tinytest/test_rcpp_package_skeleton.R: Idem
	* inst/tinytest/test_reference.R: Idem

	* inst/tinytest/test_*.R: Streamlined initial test and sourceCpp call

	* src/attributes.cpp: Remove dangling '#nocov end'

2019-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/tinytest/test_binary_package.R: Finer-grained skip messages

	* inst/tinytest/test_misc.R: Add commented-out test that fails
	* tests/tinytest.R: Minor edit

	* docker/ci/Dockerfile: Add curl and ssl -dev packages needed for covr

2019-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-FAQ.Rmd (Rcpp): Add entry about "'dataptr' (or
	'enterRNGScope') not provided by Rcpp" recommending proper importFrom

2019-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Lighter builds as fewer Suggests:
	* docker/plus/Dockerfile: Take packages moved from ci/Dockerfile

2019-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* DESCRIPTION (Suggests): Remove knitr, rmarkdown, pinp
	* DESCRIPTION (VignetteBuilder): Remove knitr

2019-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_embedded_r.R: Use sink to suppress noisy output,
	reenable tests (still conditional on usual environment variable)

2019-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/cpp/Vector.cpp (no_op): Suppress compiler warning

2019-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Add tinytest, remove RUnit

	* tests/doRUnit.R: Removed
	* tests/tinytest.R: Added
